JSW Devsb/src/objects/NSR__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Nsrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Discount_MT__c</fullName>
        <label>Cash Discount/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Code_Desc__c</fullName>
        <label>Company Code Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Desc__c</fullName>
        <label>Customer Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_group_1__c</fullName>
        <label>Customer group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_group_2__c</fullName>
        <label>Customer group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_group_3__c</fullName>
        <label>Customer group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_group_Desc__c</fullName>
        <label>Customer group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_group__c</fullName>
        <label>Customer group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_grp_1_Desc__c</fullName>
        <label>Customer grp 1 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_grp_2_Desc__c</fullName>
        <label>Customer grp 2 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_grp_3_Desc__c</fullName>
        <label>Customer grp 3 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_channel_Desc__c</fullName>
        <label>Distribution channel Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_channel__c</fullName>
        <label>Distribution channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Desc__c</fullName>
        <label>Division Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Services_MT__c</fullName>
        <label>External Services/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_Profit_Center__c</fullName>
        <label>GRP Profit Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_Desc__c</fullName>
        <label>Material Group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_WFreight_Revenue_MT__c</fullName>
        <label>O/WFreight Revenue/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutgoingFreight_MT__c</fullName>
        <label>OutgoingFreight/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Costs_MT__c</fullName>
        <label>Packing Costs/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_year_Desc__c</fullName>
        <label>Period/year Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_year__c</fullName>
        <label>Period/year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Desc__c</fullName>
        <label>Plant Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroups_Desc__c</fullName>
        <label>ProductGroups Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroups__c</fullName>
        <label>ProductGroups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Desc__c</fullName>
        <label>Product Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Qty__c</fullName>
        <label>Region Qty</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_MT__c</fullName>
        <label>Revenue/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Commission_MT__c</fullName>
        <label>Sales Commission/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Deduction_MT__c</fullName>
        <label>Sales Deduction/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Desc__c</fullName>
        <label>Sales Org Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_district_Desc__c</fullName>
        <label>Sales district Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_district__c</fullName>
        <label>Sales district</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Region_NSR_MT__c</fullName>
        <label>Total Region NSR/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NSR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>Division__c</columns>
        <columns>Distribution_channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N{0000000}</displayFormat>
        <label>Nsr Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>